sprint2 updated