@@ -9,12 +9,14 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import static org.apache.commons.lang3.BooleanUtils.forEach;
+
 public class BaseController {
     protected Pageable getPageable(int pageNumber, int pageSize,
                                    String sortDirection, String... sort) {
         Sort.Direction direction = sortDirection.equalsIgnoreCase("asc") ? Sort.Direction.ASC : Sort.Direction.DESC;
         List<Sort.Order> orders = new ArrayList<>();
-        Arrays.stream(sort).collect(Collectors.toList()).forEach(field -> {
+        Arrays.stream(sort).toList().forEach(field -> {
             Sort.Order order = new Sort.Order(direction, field);
         });
         return PageRequest.of(pageNumber, pageSize, Sort.by(orders));
